tests/test_proof/bad/output/duration-empty.catala_en.Proof
[RESULT] [A.x] This variable never returns an empty error
[RESULT] [A.x] No two exceptions to ever overlap for this variable
[ERROR] [A.y] This variable might return an empty error:
 --> tests/test_proof/bad/duration-empty.catala_en
  | 
6 |   context y content boolean
  |           ^
  + Test
Counterexample generation is disabled so none was generated.
[RESULT] [A.y] No two exceptions to ever overlap for this variable
